c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/multiple_function_definitions.c
/* Function 'foo' is defined twice */
int foo(void){
    return 3;
}

int main(void) {
    return foo();
}

int foo(void){
    return 4;
}